# Test-Checker-Bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  weaknesses.md
.github/workflows/: deploy.yml
app/alembic/: __init__.py  env.py
app/alembic/versions/: 001_initial.py  002_attempts_titul_nullable.py
app/api/: deps.py  main.py
app/api/routes/: attempts.py  auth.py  groups.py  results.py  (+3 more)
app/bot/: __init__.py  main.py  states.py
app/core/: config.py  db.py  logging.py
app/models/: __init__.py  attempt.py  group.py  student.py  test.py  titul.py  user.py
app/omr/: __init__.py  anchors.py  bubbles.py  debug.py  layout.py  pipeline.py  qr.py
app/pdf/: __init__.py  qrgen.py  render.py
app/schemas/: attempts.py  groups.py  students.py  tests.py  tituls.py
app/services/: excel.py  grading.py  groups.py  history.py  students.py  tests.py  titul.py
app/templates/: dashboard.html  login.html
app/tests/: conftest.py  test_grade.py  test_key_parse.py  test_layout.py  test_omr_regression.py  test_web_api.py
app/worker/: __init__.py  celery_app.py  tasks.py
docs/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_DATABASE.md  03_OMR_PIPELINE.md  04_PDF_TEMPLATES.md  05_BOT_FLOWS.md  06_API.md  07_ANTIGRAVITY_PROMPT.md
scratch/: analyze_bubbles.py  check_alignment.py  debug_coords.py  find_printed_bubbles.py  inspect_ink_density.py  inspect_titul.py  list_attempts.py  print_all_ratios.py  print_threshold.py  save_pdf_page.py  test_new_scaling.py  test_omr.py  test_warp_size.py
scripts/: calibrate.py
(+15 files in other folders)
