[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omr-test-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web & async
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",

    # Bot
    "aiogram>=3.7.0",

    # DB
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",    # alembic / celery sync

    # Queue
    "celery>=5.4.0",
    "redis>=5.0.0",

    # Computer Vision / OMR
    "opencv-python-headless>=4.10.0.84",
    "numpy>=1.26.0",
    "PyMuPDF>=1.24.0",
    "pyzbar>=0.1.9",
    "Pillow>=10.3.0",

    # PDF / HTML
    "weasyprint>=62.0",
    "jinja2>=3.1.4",
    "qrcode[pil]>=7.4.2",

    # Settings
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # Utils
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "anyio>=4.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]
